@@ -15,6 +15,9 @@ Version 1.3.x - xx xxx 2009
 
   * Make default encoding ISO. Ticket #105.
 
+  * Properly detect boost versioned libraries on OS X. 
+    Ticket #106
+
 Version 1.3.1 - 18 Mar 2009
 
   * Expose RetsVersionToString to SWIG languages. Ticket #92.
